--- a/Project_1/example/style.css
+++ b/Project_1/example/style.css
@@ -3,6 +3,8 @@ body {
     font-family: "HelveticaNeueLT Std","Helvetica LT Std Light", "Helvetica", "Arial", "sans-serif";
 }
 
+
+
 #plot1, #plot2, #plot3 {
     width: 414px;
     height: 736px;
@@ -11,9 +13,11 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-bottom:40px;
+    margin-top:100px; 
 }
 
 #plot2 canvas, #plot3 canvas  {
     width: 100%;
     height: 100%;
 }
+
