--- a/Project_1/style.css
+++ b/Project_1/style.css
@@ -2,7 +2,7 @@ body {
     padding: 50px;
 }
 
-#plot1, #plot2, #plot3 {
+#plot1, #plot2, #plot3, #prototypes {
     width: 414px;
     height: 736px;
     border: 1px solid;
@@ -10,6 +10,16 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-bottom:40px;
+}
+img{
+    width: 600px;
+    height: 736px;
+    border: 1px solid;
+    float: left;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom:40px;
+
 }
 
 #plot2 canvas, #plot3 canvas  {
