--- a/Project_2/style.css
+++ b/Project_2/style.css
@@ -1,5 +1,7 @@
 body {
     padding: 50px;
+    display:flex;
+    flex-flow: column
 }
 
 
@@ -11,4 +13,19 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-bottom:40px;
+}
+
+.row img {
+     width: 414px;
+     height: 736px;
+     border:1px solid;
+}
+
+.sketches img{
+    width:40%;
+    
+}
+
+.sketches{
+    margin-top: 40px;
 }
