--- a/Project_2/style.css
+++ b/Project_2/style.css
@@ -1,7 +1,8 @@
 body {
     padding: 50px;
     display:flex;
-    flex-flow: column
+    flex-flow: column;
+    font-family: 'Fira Sans', sans-serif;
 }
 
 
@@ -15,6 +16,24 @@ body {
     margin-bottom:40px;
 }
 
+h2{
+    margin-top: 35px;
+    text-align: center;
+    font-size: 11pt;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 0.1em;
+    /*margin-bottom: 20px;*/
+}
+
+#temp {
+    text-align: center;
+    font-weight: 800;
+    font-size: 100px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    color: #dcdcdc;
+}
 .row img {
      width: 414px;
      height: 736px;
@@ -28,4 +47,25 @@ body {
 
 .sketches{
     margin-top: 40px;
+}
+
+.weekWeather .lines {
+    stroke:#f9c784;
+    stroke-width: 20px;
+    
+}
+.weekWeather .currentRect {
+   
+    fill:#ff8c42;
+    stroke-width: 2px;
+}
+
+.axis-y path {
+    display: none;
+}
+
+.axis-x path{
+    stroke:#FCAF58;
+    stroke-dasharray: 5,5; 
+    stroke-width:5px;
 }
