--- a/Project_2/style.css
+++ b/Project_2/style.css
@@ -16,23 +16,73 @@ body {
     margin-bottom:40px;
 }
 
+#mobile1{
+    display:grid;
+    grid-template-rows:20% auto 30%;
+}
+
+.header {
+    display:grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows:20% 20% 20% 10% 10% 20% ;
+}
+
 h2{
     margin-top: 35px;
-    text-align: center;
+    text-align: left;
     font-size: 11pt;
     text-transform: uppercase;
     font-weight: 300;
     letter-spacing: 0.1em;
+    grid-column-start:2;
+    grid-column-end: 2;
+    grid-row-start:2;
+    grid-row-end:2;
     /*margin-bottom: 20px;*/
 }
 
 #temp {
-    text-align: center;
-    font-weight: 800;
-    font-size: 100px;
-    margin-top: 20px;
+    text-align: left;
+    font-weight: 1000;
+    font-size: 140px;
+    margin-top: 0px;
     margin-bottom: 10px;
     color: #dcdcdc;
+    grid-column-start:1;
+    grid-column-end: 1;
+    grid-row-start:1;
+    grid-row-end:6;
+    
+}
+#plot1{
+    margin-bottom:20px;
+}
+.footer{
+    display:grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows:20% 20% 20% 20% 20%;
+}
+
+#summary{
+    margin-top:0px;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 14pt;
+    font-weight: 100;
+    grid-column-start:2;
+    grid-column-end: 4;
+    grid-row-start:3;
+    grid-row-end:4;
+   
+}
+#tempDirection{
+    width:20px;
+    height:20px;
+    border: 0px;
+    grid-column-start:4;
+    grid-column-end: 5;
+    grid-row-start:3;
+    grid-row-end:4;
 }
 .row img {
      width: 414px;
@@ -45,6 +95,8 @@ h2{
     
 }
 
+
+
 .sketches{
     margin-top: 40px;
 }
@@ -55,7 +107,6 @@ h2{
     
 }
 .weekWeather .currentRect {
-   
     fill:#ff8c42;
     stroke-width: 2px;
 }
